--- a/partial/about.html
+++ b/partial/about.html
@@ -1,4 +1,4 @@
-<div>
-  <div>About</div>
+<div class="card shadow">
+  <h3>About</h3>
   <div>This is all about www.nareshdhungana.com.np</div>
 </div>
