--- a/partial/home.html
+++ b/partial/home.html
@@ -1,3 +1,4 @@
 <div>
-  Home
+  <h3>Home</h3>
+  <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
 </div>
