--- a/partial/dashboard.html
+++ b/partial/dashboard.html
@@ -1,3 +1,4 @@
 <div>
-  Dashboard
+  <h3>Dashboard</h3>
+  <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
 </div>
