--- a/partial/download.html
+++ b/partial/download.html
@@ -1,3 +1,4 @@
 <div>
-  Downloads
+  <h3>Downloads</h3>
+  <div>For more detail : <a href="http://nareshdhungana.com.np/download">www.nareshdhungana.com.np</a></div>
 </div>
