--- a/partial/home.html
+++ b/partial/home.html
@@ -1,4 +1,6 @@
 <div>
   <h3>Home</h3>
   <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
+  <code> (a+b)² = a²+2ab+b² </code>
+  <pre>to be continued...</pre>
 </div>
