--- a/partial/home.html
+++ b/partial/home.html
@@ -1,10 +1,12 @@
 <div>
   <h3>Home</h3>
   <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
-  <ol>
-    <li><code>(a+b)² = a²+2ab+b²</code></li>
-    <li><code>(a-b)² = a²-2ab+b²</code></li>
-    <li>(a+b)³ = ....</li>
-  </ol>
-  <pre>to be continued...</pre>
+  
+  <pre>
+    <ol>
+      <li><code>(a+b)² = a²+2ab+b²</code></li>
+      <li><code>(a-b)² = a²-2ab+b²</code></li>
+      <li>(a+b)³ = ....</li>
+    </ol>
+    to be continued...</pre>
 </div>
