--- a/partial/home.html
+++ b/partial/home.html
@@ -4,9 +4,14 @@
   
   <pre>
     <ol>
-      <li><code>(a+b)² = a²+2ab+b²</code></li>
-      <li><code>(a-b)² = a²-2ab+b²</code></li>
-      <li>(a+b)³ = ....</li>
+      <li>(a+b)² = a²+2ab+b²</li>
+      <li>(a-b)² = a²-2ab+b²</li>
+      <li>(a+b)³ = a³+....</li>
     </ol>
-    to be continued...</pre>
+    to be continued...
+    
+      When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+      $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+    
+   </pre>
 </div>
