--- a/partial/home.html
+++ b/partial/home.html
@@ -9,9 +9,9 @@
       <li>(a+b)³ = a³+....</li>
     </ol>
     to be continued...
-    
+  </pre>
+  <div>
       When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
       $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
-    
-   </pre>
+  </div>
 </div>
