--- a/partial/home.html
+++ b/partial/home.html
@@ -11,6 +11,8 @@
     to be continued...
   </pre>
   <div>
+    Let's consider <math><mi>a</mi><mo>≠</mo><mn>0</mn></math>.
+    
       When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
       $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
   </div>
