--- a/partial/dashboard.html
+++ b/partial/dashboard.html
@@ -1,4 +1,13 @@
 <div>
   <h3>Dashboard</h3>
   <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
+  <pre>
+    <ol>
+      <li>(a+b)² = a²+2ab+b²</li>
+      <li>(a-b)² = a²-2ab+b²</li>
+      <li>(a+b)³ = a³+....</li>
+    </ol>
+    to be continued...
+  </pre>
+  
 </div>
