--- a/partial/home.html
+++ b/partial/home.html
@@ -1,19 +1,15 @@
 <div>
   <h3>Home</h3>
   <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
-  
-  <pre>
-    <ol>
-      <li>(a+b)² = a²+2ab+b²</li>
-      <li>(a-b)² = a²-2ab+b²</li>
-      <li>(a+b)³ = a³+....</li>
-    </ol>
-    to be continued...
-  </pre>
-  <div>
-    Let's consider <math><mi>a</mi><mo>≠</mo><mn>0</mn></math>.
-    
-      When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
-      $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+  <div class="card">
+    <div class="card-img"><img src="https://raw.githubusercontent.com/Sunresh/Sunresh/master/IMG/logo.jpg"/></div>
   </div>
+  <div>
+    <h3>Notice::</h3>
+    <ol>
+      <li>Congratulations to all SEE graduates</li>
+      <li><a href="https://see.ntc.net.np/results/grade">SEE Marksheet</a></li>
+    </ol>
+  </div>
+  
 </div>
