--- a/partial/about.html
+++ b/partial/about.html
@@ -1,4 +1,5 @@
 <div class="card shadow">
   <h3>About</h3>
-  <div>This is all about www.nareshdhungana.com.np</div>
+  <div>Naresh Dhungana..</div>
+  <div>info@nareshdhungana.com.np</div>
 </div>
