--- a/partial/home.html
+++ b/partial/home.html
@@ -1,8 +1,10 @@
 <div>
   <h3>Home</h3>
-  <div>For more detail : <a href="http://nareshdhungana.com.np">www.nareshdhungana.com.np</a></div>
+  
   <div class="card">
-    <div class="card-img"><img src="https://raw.githubusercontent.com/Sunresh/Sunresh/master/IMG/logo.jpg"/></div>
+    <img class="card-img-top" src="https://raw.githubusercontent.com/Sunresh/Sunresh/master/IMG/logo.jpg" />
+    <div class="card-title">Sunresh.</div>
+    <div class="card-text">Sunresh is multiplateform application.</div>
   </div>
   <div>
     <h3>Notice::</h3>
