--- a/partial/math.html
+++ b/partial/math.html
@@ -9,5 +9,7 @@
     </ol>
     to be continued...
   </pre>
-
+  <ol>
+    <li class="btn btn-warning"><a href="https://en.wikipedia.org/w/index.php?title=Mathematics&mobileaction=toggle_view_desktop" target="_blank">Wikipedia</a></li>
+  </ol>
 </div>
