--- a/partial/home.html
+++ b/partial/home.html
@@ -1,16 +1,18 @@
 <div>
-  <h3>Home</h3>
-  
   <div class="card">
-    <img class="card-img-top" src="https://raw.githubusercontent.com/Sunresh/Sunresh/master/IMG/logo.jpg" />
-    <div class="card-title">Sunresh.</div>
-    <div class="card-text">Sunresh is multiplateform application.</div>
+    <div class="card-header row">
+      <div class="col-12 row">
+       <img class="col-2 w-50" src="https://raw.githubusercontent.com/Sunresh/Sunresh/master/IMG/logo.jpg" />
+       <div class="col-10">Sunresh.</div>
+      </div>
+    <div class="card-text col-12">Sunresh is multiplateform application.</div>
+  </div>
   </div>
   <div>
     <h3>Notice::</h3>
     <ol>
       <li>Congratulations to all SEE graduates</li>
-      <li><a href="https://see.ntc.net.np/results/grade">SEE Marksheet</a></li>
+      <li><a href="https://see.ntc.net.np/results/grade" target="_blank">SEE Marksheet</a></li>
     </ol>
   </div>
   
