--- a/partial/home.html
+++ b/partial/home.html
@@ -15,5 +15,8 @@
       <li><a href="https://see.ntc.net.np/results/grade" target="_blank">SEE Marksheet</a></li>
     </ol>
   </div>
-  
+  <div class="card center">
+	<div class="h4">YouTube Channel</div>
+	<iframe width="100%" height="345" src="https://www.youtube.com/embed/JtahozXxq3E?controls=0"></iframe>
+  </div>
 </div>
