--- a/partial/about.html
+++ b/partial/about.html
@@ -1,5 +1,5 @@
 <div class="card shadow">
-  <h3>About</h3>
+  <h3 class="card-header">About</h3>
   <div>Naresh Dhungana..</div>
-  <div>info@nareshdhungana.com.np</div>
+  <div>sunresh@nareshdhungana.com.np</div>
 </div>
