--- a/partial/math.html
+++ b/partial/math.html
@@ -3,9 +3,24 @@
 
   <pre>
     <ol>
-      <li>(a+b)² = a²+2ab+b²</li>
-      <li>(a-b)² = a²-2ab+b²</li>
-      <li>(a+b)³ = a³+....</li>
+      <li>(a+b)² = a²+2ab+b².</li>
+      <li>(a-b)² = a²-2ab+b².</li>
+	  <li>a²+b²=(a+b)²-2ab
+		=(a-b)²+2ab</li>
+	  <li>a²-b²=(a+b)(a-b)</li>
+      <li>(a+b)³ = (a+b)(a+b)(a+b)
+	  =(a+b)(a²+2ab+b²)
+	  =a²(a+b)+2ab(a+b)+b²(a+b)
+	  =a³+a²b+2ab(a+b)+ab²+b³
+	  =a³+ab(a+b)+2ab(a+b)+b³
+	  =a³+3ab(a+b)+b³
+	  </li>
+	  <li>(a-b)³=(a-b)(a²-2ab+b²)
+		=a³-3ab(a-b)-b³</li>
+	  <li>a³+b³=(a+b)³-3ab(a+b)
+		=(a+b)(a²-ab+b²)</li>
+	  <li>a³-b³=(a-b)³+3ab(a-b)
+		=(a-b)(a²+ab+b²)</li>
     </ol>
     to be continued...
   </pre>
